k8s/apps/harbor/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: argocd
      namespace: argocd
  hostnames:
    - "harbor.192.168.39.200.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor
          port: 80
          weight: 1
